# Neural-network-conversion

./: .gitignore  CMakeLists.txt  README.md  convert_pytorch.py  create_dummy_network.py  simple_net.cc  simple_net.hpp  simple_net.pt  simple_net.tflite  visualize.py
networks/: create_dummy_network.py  simple_net.cpp  simple_net.tflite
networks/quadbug/: allocation_net.pt  allocation_net.pth  big_control_net.cc  big_control_net.cpp  big_control_net.hpp  big_control_net.tflite  big_quadBug_control.pt  big_test_result.txt  control_net.cc  control_net.cpp  control_net.hpp  control_net.pt  control_net.pth  control_net.tflite  convert_control_net.py  networks.py  quadBug.pt  quadBug.pth  quadBug_allocation.pt  quadBug_allocation_jit.pt  quadBug_control.pt  quadBug_control_jit.pt  save_model.cpp  test.py  test_result.txt
